[gd_scene load_steps=11 format=3 uid="uid://d0mqpv4gb37q4"]

[ext_resource type="Texture2D" uid="uid://dv2ardwlp1rcy" path="res://assets/Enemies/slime_red.png" id="1_0dspo"]
[ext_resource type="Script" path="res://scripts/boss.gd" id="1_x0cqa"]
[ext_resource type="Texture2D" uid="uid://b6vu4uxeeo4c8" path="res://assets/FX/bomb_explosion.png" id="2_o3p04"]
[ext_resource type="AudioStream" uid="uid://di1smj38gta3b" path="res://sounds/toggle_003.ogg" id="4_1bi2u"]

[sub_resource type="Animation" id="Animation_828br"]
resource_name = "Enemi_Wallk"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_6tlmj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ld2di"]
_data = {
"Enemi_Wallk": SubResource("Animation_828br"),
"RESET": SubResource("Animation_6tlmj")
}

[sub_resource type="Animation" id="Animation_41dav"]
resource_name = "Dead_FX"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dead_FX:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dead_FX:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_1hscm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dead_FX:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dead_FX:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhw2q"]
_data = {
"Enemy_Dead_FX": SubResource("Animation_41dav"),
"RESET": SubResource("Animation_1hscm")
}

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_x0cqa")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-8, -128)
scale = Vector2(16, 16)
texture = ExtResource("1_0dspo")
hframes = 5
vframes = 2

[node name="Dead_FX" type="Sprite2D" parent="."]
visible = false
position = Vector2(-4.76837e-07, -40)
scale = Vector2(16, 16)
texture = ExtResource("2_o3p04")
hframes = 5

[node name="MapDetector" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -80)
scale = Vector2(10, 10)
polygon = PackedVector2Array(9.6, 8, -11.2, 8, -11.2, 7.2, 9.6, 7.2)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -80)
scale = Vector2(10, 10)

[node name="Player_Detector" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(0, -7.62939e-07)
polygon = PackedVector2Array(-12, 8, -12, 1.6, -0.8, -6.4, 10.4, 0, 10.4, 8)

[node name="RayCast_Wall" type="RayCast2D" parent="."]
position = Vector2(0, -40)
scale = Vector2(2, 2)
target_position = Vector2(-72, 0)
collision_mask = 4
hit_from_inside = true

[node name="Enemy_Walk_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ld2di")
}

[node name="Enemy_Dead_FX_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dhw2q")
}

[node name="dead_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1bi2u")
pitch_scale = 0.5

[node name="damage_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1bi2u")
volume_db = -10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="Enemy_Dead_FX_AnimationPlayer" to="." method="_on_enemy_dead_fx_animation_player_animation_finished"]
